# AndroidJavaHooking

./: .gitignore
app/app/: build.gradle
app/app/src/main/cpp/: CMakeLists.txt  app.cpp  app_exe.cpp  fake_dlfcn.cpp  fake_dlfcn.hpp  hooker.cpp  hooker.hpp  log.hpp  math.hpp  payload_dex_data.hpp  trampoline_factory.cpp  trampoline_factory.hpp  trampoline_generator.cpp  trampoline_generator.hpp
app/app/src/main/java/com/example/app/: FirstFragment.java  MainActivity.java  SecondFragment.java
app/app/src/main/res/layout/: fragment_first.xml
app/gradle/wrapper/: gradle-wrapper.properties
payload/: .gitignore  build_and_update_payload.sh  settings.gradle
payload/app/: build.gradle  proguard-rules.pro
payload/app/src/androidTest/java/com/example/payload/: ExampleInstrumentedTest.java
payload/app/src/main/: AndroidManifest.xml
payload/app/src/main/java/com/example/payload/: GetDialogMessageHook.java  HandleClickMeClickHook.java  Payload.java  PeriodicLogHook.java
payload/app/src/main/res/values/: strings.xml  themes.xml
payload/app/src/main/res/values-night/: themes.xml
payload/app/src/test/java/com/example/payload/: ExampleUnitTest.java
payload/gradle/wrapper/: gradle-wrapper.properties
